<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        style="@style/Widget.MyApplication.BackButton"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/verification_code_sent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <com.example.myapplication.ui.emailconfirmation.VerificationCodeEditText
        android:id="@+id/verificationCodeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:vcet_numberOfSlots="6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verifyCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/email_confirmation_verify_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationCodeEditText" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendCode"
        style="@style/Widget.MyApplication.LinkButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/email_confirmation_send_code_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyCode" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/openEmail"
        style="@style/Widget.MyApplication.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="96dp"
        android:text="@string/email_confirmation_open_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendCode" />

</androidx.constraintlayout.widget.ConstraintLayout>